--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html ng-app="cokeApp">
 <head>
-	<title></title>
+	<title>Coke App!</title>
+    <!--Bootstrap styles-->
+    <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
+
+    <!--Custom styling-->
+    <link href="css/styles.css">
 </head>
 <body ng-controller="cokeController">
 
+{{helloWorld}}
+
 </body>
+
+<!--Angular-->
+<script src="node_modules/angular/angular.min.js"></script>
+<script src="node_modules/angular-route/angular-route.min.js"></script>
+
+<!--App files-->
+<script src="js/app.js"></script>
+<script src="js/controllers/coke-controller.js"></script>
 </html>
