--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
 
     <!--Custom styling-->
-    <link href="css/styles.css">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body ng-controller="cokeController">
 
