added controller in html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <body ng-controller="cokeController">
 
 {{helloWorld}}
-{{howdyFrans}}
+
+<div ng-controller="hamController">{{howdyFrans}}</div>
 
 </body>
 
