--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 {{helloWorld}}
 
-<div ng-controller="hamController">{{howdyFrans}}</div>
+<div ng-controller="hamController">{{howdyFrands}}</div>
 
 </body>
 
@@ -24,4 +24,5 @@
 <!--App files-->
 <script src="js/app.js"></script>
 <script src="js/controllers/coke-controller.js"></script>
+<script src="js/controllers/ham-controller.js"></script>
 </html>
