--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 
 <div ng-controller="hamController">{{howdyFrands}}</div>
 
+<div ng-controller="twitterController">{{twitter}}</div>
+
 </body>
 
 <!--Angular-->
