--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body ng-controller="cokeController">
 
-{{helloWorld}}
-
-<div ng-controller="hamController">{{howdyFrands}}</div>
-
-<div ng-controller="twitterController">{{twitter}}</div>
+<div class="row">
+    <div class="col-md-4">
+        <twitter></twitter>
+    </div>
+</div>
 
 </body>
 
