Added empty divs for use

--- a/index.html
+++ b/index.html
@@ -11,9 +11,27 @@
 </head>
 <body ng-controller="cokeController">
 
-{{helloWorld}}
+<div class="row">
+    <!--Instagram-->
+    <div class="col-md-4">
 
-<div ng-controller="hamController">{{howdyFrands}}</div>
+    </div>
+    <!--Facebook-->
+    <div class="col-md-4">
+
+    </div>
+    <!--Twitter-->
+    <div class="col-md-4">
+
+    </div>
+</div>
+
+<div class="row">
+    <!--YouTube-->
+    <div class="col-md-12">
+
+    </div>
+</div>
 
 </body>
 
