--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="cokeApp">
 <head>
-	<title>Coke App Done By Some Great Studnets!</title>
+	<title>Coke App Done by Some Great Studnets!</title>
     <!--Bootstrap styles-->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
