--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <twitter></twitter>
+        <twitter ng-controller="twitterController"></twitter>
     </div>
 </div>
 
@@ -26,5 +26,5 @@
 <!--App files-->
 <script src="js/app.js"></script>
 <script src="js/controllers/coke-controller.js"></script>
-<script src="js/controllers/ham-controller.js"></script>
+<script src="js/controllers/twitter-controller.js"></script>
 </html>
