started template for html and set controller html

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 
 <div ng-controller="hamController">{{howdyFrands}}</div>
 
+<div ng-controller="instaController">{{test}}</div>
+
+
 </body>
 
 <!--Angular-->
@@ -25,4 +28,5 @@
 <script src="js/app.js"></script>
 <script src="js/controllers/coke-controller.js"></script>
 <script src="js/controllers/ham-controller.js"></script>
+<script src="js/controllers/insta-controller.js"></script>
 </html>
