--- a/index.html
+++ b/index.html
@@ -29,4 +29,5 @@
 <script src="js/controllers/coke-controller.js"></script>
 <script src="js/controllers/ham-controller.js"></script>
 <script src="js/controllers/insta-controller.js"></script>
+<script src="js/instafeed.instafeed.min.js"></script>
 </html>
