--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body ng-controller="cokeController">
 
 {{helloWorld}}
-<div col-md-3>
+<div class="col-md-3" id="facebook">
 	<iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fcocacolaunitedstates&tabs=timeline%2C%20events%2C%20messages&width=400px&height=500px&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="400px" height="500px" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 </div>
 <div ng-controller="hamController">{{howdyFrands}}</div>
