--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="row">
     <!--Instagram-->
     <div class="col-md-4">
-
+		<instagram></instagram>
     </div>
     <!--Facebook-->
     <div class="col-md-4">
@@ -46,10 +46,10 @@
 <script src="js/app.js"></script>
 <script src="js/controllers/coke-controller.js"></script>
 <script src="js/controllers/ham-controller.js"></script>
-<<<<<<< HEAD
+
 <script src="js/controllers/insta-controller.js"></script>
-<script src="js/instafeed.instafeed.min.js"></script>
+<script src="js/instafeed/instafeed.min.js"></script>
 </html>
 =======
 </html>
->>>>>>> master
+
