--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
 {{helloWorld}}
 <div class="col-md-3">
+	<h2>Coca-Cola Facebook</h2>
 	<iframe id="facebook" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fcocacolaunitedstates&tabs=timeline%2C%20events%2C%20messages&width=400px&height=500px&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="400px" height="500px" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
 </div>
 <div ng-controller="hamController">{{howdyFrands}}</div>
