--- a/index.html
+++ b/index.html
@@ -5,25 +5,24 @@
     <!--Bootstrap styles-->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
-
     <!--Custom styling-->
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body ng-controller="cokeController">
-
 {{helloWorld}}
-<div class="col-md-3">
-	<h2>Coca-Cola Facebook</h2>
-	<iframe id="facebook" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fcocacolaunitedstates&tabs=timeline%2C%20events%2C%20messages&width=400px&height=500px&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="400px" height="500px" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+<div class="container">
+	<div class="row">
+		<div id="facebook-container" class="col-md-3">
+			<h2>Coca-Cola Facebook</h2>
+			<iframe id="facebook" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fcocacolaunitedstates&tabs=timeline%2C%20events%2C%20messages&width=400px&height=500px&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId" width="400px" height="500px" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+		</div>
+	</div>
 </div>
 <div ng-controller="hamController">{{howdyFrands}}</div>
-
 </body>
-
 <!--Angular-->
 <script src="node_modules/angular/angular.min.js"></script>
 <script src="node_modules/angular-route/angular-route.min.js"></script>
-
 <!--App files-->
 <script src="js/app.js"></script>
 <script src="js/controllers/coke-controller.js"></script>
