--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html ng-app="cokeApp">
 <head>
 	<title>Coke App Done By Some Great Studnets!</title>
+	<link rel="shortcut icon" href="css/img/bottle.ico">
     <!--Bootstrap styles-->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
