Working youTube iframes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="cokeApp">
 <head>
-	<title>Coke App Done By Some Great Studnets!</title>
+	<title>Coke App Done by Some Great Studnets!</title>
     <!--Bootstrap styles-->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
@@ -11,9 +11,27 @@
 </head>
 <body ng-controller="cokeController">
 
-{{helloWorld}}
+<div class="row">
+    <!--Instagram-->
+    <div class="col-md-4">
 
-<div ng-controller="hamController">{{howdyFrands}}</div>
+    </div>
+    <!--Facebook-->
+    <div class="col-md-4">
+
+    </div>
+    <!--Twitter-->
+    <div class="col-md-4">
+
+    </div>
+</div>
+
+<div class="row">
+    <!--YouTube-->
+    <div class="col-md-12">
+
+    </div>
+</div>
 
 </body>
 
