updated YT section of index

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="cokeApp">
 <head>
-	<title>Coke App Done by Some Great Studnets!</title>
+	<title>Coke App Done By Some Great Studnets!</title>
     <!--Bootstrap styles-->
     <link href="node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="node_modules/bootstrap/dist/css/bootstrap-theme.min.css" rel="stylesheet">
@@ -28,8 +28,10 @@
 
 <div class="row">
     <!--YouTube-->
-    <div class="col-md-12">
-
+    <div class="col-md-12" ng-controller="youTubeCtrl">
+        <div ng-repeat="video in YTVidArr track by $index">
+            <iframe width="560" height="315" ng-src="{{video}}" frameborder="0" allowfullscreen></iframe>
+        </div>
     </div>
 </div>
 
